fix style on small screen

--- a/bootstrap4/assets/css/custom.css
+++ b/bootstrap4/assets/css/custom.css
@@ -171,6 +171,7 @@ body{
     position: fixed;
     top: 0;
     left: -300px;
+    z-index: 999;
 }
 
 .sidebar-wrapper ul {
